# tinysoundfont-pybind

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  wheels.yml
doc/: requirements.txt
doc/source/: conf.py  developer.rst  guide.rst  index.rst  note_1080.rstinc  note_drum_midi.rstinc  note_florestan.rstinc  note_fluidr3.rstinc  note_piano.rstinc  note_rpn.rstinc  note_sleep.rstinc  reference.rst  table_supported_controller.rstinc  table_supported_rpn.rstinc
src/: example.cpp  main.cpp
src/_tinysoundfont/: main.cpp
src/tinysoundfont/: __init__.py  __main__.py  midi.py  sequencer.py  synth.py
src/tinysoundfont/midi/: __init__.py
test/: drum.mid  example_chord.py  example_drums.py  example_instruments.py  example_midi_filter.py  example_one_note.py  example_song.py  florestan-subset.sfo  playtest.py  simple.py  test_synth.py  test_tinysoundfont.py
