[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "pybind11~=2.6.1"]

[project]
name = "tinysoundfont"
dynamic = [ "version" ]
authors = [
    { name = "Nathan Whitehead", email = "nwhitehe@gmail.com" },
]
description = "Python bindings for using Sound Fonts (sf2 format) and generating audio samples"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.meson-python.args]
setup = ['--default-library=static']
