[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "tinysoundfont"
version = "0.2.4"
authors = [ { name = "Nathan Whitehead", email = "nwhitehe@gmail.com" } ]
description = "Python bindings for using Sound Fonts (sf2/sf3/sfo formats) and generating audio samples"
readme = "README.md"
python_requires = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
