[metadata]
name = tinysoundfont
version = 0.1.0
author = Nathan Whitehead
author_email= nwhitehe@gmail.com
description = Python bindings for loading Sound Fonts (sf2 format) and generating audio samples
long_description = file: README.md

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    setuptools>=42
    wheel
    pybind11~=2.6.1
